# PeparationLearning

./: .gitignore  CMakeLists.txt
cmake/: CompilationConfigure_BACKUP_16794.cmake  CompilationConfigure_LOCAL_16794.cmake
knowledge/ma_kun/第一周/: Google代码风格(C++).pptx  装饰器模式.pptx
knowledge/ma_kun/第三周/: GoogleStyleC++.pptx  Google代码风格(C++).pptx  list和queue.pptx  策略模式.pptx
knowledge/ma_kun/第二周/: C++三种继承、多态.pptx  STL中vector、map、set的实现原理和使用.pptx  享元模式和代理模式.pptx
knowledge/wang_qian_nan/第一周/: Adapter.ppt  适配器模型.doc
knowledge/wang_qian_nan/第三周/: 异常处理.ppt  类型转换.ppt  适配器模式和桥接模式联用.ppt
knowledge/wang_qian_nan/第二周/: Memento.ppt  Observer.ppt  String类.ppt  内联函数.ppt  友元类和友元函数.ppt  指针和引用.ppt
knowledge/wang_wei_guo/第一周/: git和githhub.odp  git和github  第一周_王卫国_git安装与github使用.docx
knowledge/wang_wei_guo/第三周/: 状态模式.pptx
knowledge/wang_wei_guo/第二周/: 组合模式和外观模式.pptx
knowledge/wang_wei_guo/第二周/Buy/: CMakeLists.txt  Facade.h  StockA.h  StockB.h  StockC.h  main.cpp
knowledge/wang_wei_guo/第二周/Composite/: CMakeLists.txt  composite.cpp  main.cpp
knowledge/wang_wei_guo/第四周/: CmakeLists-2.txt
knowledge/zhang_hong_tai/: auto和decltyp.pptx
knowledge/zhang_hong_tai/Observer/: 组合模式和观察者模式.vsdx  组合模式观察者模式联用.pptx
knowledge/zhang_hong_tai/Visitor/: 访问者模式.pptx
knowledge/zhang_yi_xin/第三次PPT/: 函数指针.pptx  模板方法模式.pptx
src/: CMakeLists.txt
src/li_le_lr/: CMakeLists.txt
src/li_le_lr/Chapter11FunctionCallBack/: CMakeLists.txt  bind.cpp  function_call.cpp  ref_usage.cpp
src/li_le_lr/Chapter12NetworkingTCP/: CMakeLists.txt  client1.cpp  server1.cpp
src/li_le_lr/forward_statement/: A.h
src/li_le_lr/knowledge/: CMakeLists.txt  ptr.cpp
src/li_le_lr/knowledge/callback/: CMakeLists.txt  callback_first.cpp  callback_inside_class.cpp  (+1 more)
src/li_le_lr/operator_reload_usages/: CMakeLists.txt  reload_learning.cpp
src/li_le_lr/student_subjects_adminstration/: CMakeLists.txt  chinese.cpp  chinese.h  compulsory_subject.cpp  compulsory_subject.h  elective_subject.cpp  elective_subject.h  student.cpp  student.h  student_subjects_google_test.cpp  student_subjects_test.cpp  subject.cpp  subject.h  teacher.cpp  teacher.h  university_class.cpp  university_class.h
src/li_le_lr/student_subjects_adminstration/proto/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Teacher.pb.cc  Teacher.pb.h  cmake_install.cmake
src/li_le_lr/student_subjects_adminstration/teacher_student_actor/: CMakeLists.txt  student_protobuf.cpp  teacher_protobuf.cpp
src/li_le_lr/student_subjects_adminstration_old/: CMakeLists.txt  chinese.cpp  student.cpp  student.h  student_subjects_test.cpp  teacher.cpp
src/li_le_lr/student_subjects_adminstration_old_v1/: CMakeLists.txt  Ch.cpp  Ch.h  chinese.cpp  chinese.h  student.cpp  student_subjects_google_test.cpp  student_subjects_test.cpp  teacher.cpp  teacher.h  university_class.cpp  university_class.h
src/li_le_lr/thread-learning/: CMakeLists.txt  condition_value.cpp  future_promise_asnc.cpp  future_promise_begin.cpp  packaged_task.cpp  thread-1.cpp  thread_join.cpp
src/ma_kun/: CMakeLists.txt
src/ma_kun/Max/: CMakeLists.txt  main.cpp
src/ma_kun/decorator/: CMakeLists.txt  main.cpp
src/ma_kun/flyweightgo/: CMakeLists.txt  main.cpp
src/ma_kun/list/: CMakeLists.txt  main.cpp
src/ma_kun/map/: CMakeLists.txt  main.cpp
src/ma_kun/proxy/: CMakeLists.txt  main.cpp
src/ma_kun/queue/: CMakeLists.txt  main.cpp
src/ma_kun/set/: CMakeLists.txt  main.cpp
src/ma_kun/strategy/: CMakeLists.txt  main.cpp  strategy.cpp  strategy.h
src/ma_kun/template/: CMakeLists.txt  main.cpp
src/ma_kun/three/: CMakeLists.txt  main.cpp
src/ma_kun/vector/: CMakeLists.txt  main.cpp
src/ma_kun/virtual/: CMakeLists.txt  main.cpp
src/wang_qian_nan/: CMakeLists.txt
src/wang_qian_nan/Adapter/: CMakeLists.txt  ClassAdapter.cpp  Method.cpp  ObjectAdapter.cpp
src/wang_qian_nan/Chinese/: CMakeLists.txt  Chinese.cpp  Chinese.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
src/wang_qian_nan/Memento/: CMakeLists.txt  GameScence.cpp  Memento.cpp
src/wang_qian_nan/Observer/: CMakeLists.txt  Observer.cpp
src/wang_qian_nan/Structure/: CMakeLists.txt  structure.cpp
src/wang_qian_nan/boost/: CMakeLists.txt  asio.cpp  lexical_cast.cpp
src/wang_wei_guo/: CMakeLists.txt
src/wang_wei_guo/Composite/: CMakeLists.txt  composite.cpp  composite.h  main.cpp
src/wang_wei_guo/CompositeAndCommand/: CMakeLists.txt  composite.cpp  composite.h  main.cpp
src/wang_wei_guo/Facade/: CMakeLists.txt  Facade.h  StockA.h  StockB.h  StockC.h  main.cpp
src/wang_wei_guo/GTest/: CMakeLists.txt  main.cpp
src/wang_wei_guo/State/: CMakeLists.txt  StateMode.cpp  StateMode.h  main.cpp
src/wang_wei_guo/StdMove/: CMakeLists.txt  main.cpp
src/wang_wei_guo/glogTest/: CMakeLists.txt  glogTest.INFO  log20181012-001229.16640  main.cpp
src/wang_wei_guo/glogTest/glog/: Makefile  Makefile.in  config.status  configure  libglog.pc  libtool
src/wang_wei_guo/glogTest/glog/src/.deps/: libglog_la-demangle.Plo  libglog_la-logging.Plo  libglog_la-raw_logging.Plo  libglog_la-signalhandler.Plo  libglog_la-symbolize.Plo  libglog_la-utilities.Plo  libglog_la-vlog_is_on.Plo  logging_unittest-logging_unittest.Po
src/zhang_hong_tai/: CMakeLists.txt
src/zhang_hong_tai/DesignPatterns_Iterator/: Aggregate.cpp  Aggregate.h  CMakeLists.txt  Iterator.cpp  Iterator.h  main.cpp
src/zhang_hong_tai/DesignPatterns_Mediator/: CMakeLists.txt  Colleague.cpp  Colleague.h  Mediator.cpp  Mediator.h  main.cpp
src/zhang_hong_tai/DesignPatterns_Observer/: CMakeLists.txt  Observer.cpp  ShapeObserver.cpp  main.cpp
src/zhang_hong_tai/DesignPatterns_Vistor/: CMakeLists.txt  main.cpp
src/zhang_yi_xin/: CMakeLists.txt
src/zhang_yi_xin/CallBack_1/: CMakeLists.txt  main.cpp  main_1.cpp  main_2.cpp
src/zhang_yi_xin/CommandAndChain/: CMakeLists.txt  Command.cpp  Command_1.cpp  main.cpp
src/zhang_yi_xin/SmrtPtrs/: CMakeLists.txt  fowl.cpp  fowl_01.cpp  main.cpp
src/zhang_yi_xin/第三次代码/lambda/: CMakeLists.txt  functor.cpp  lamb_STL.cpp  lamb_STL1.cpp  lamb_STL2.cpp  lamb_func.cpp  lambda_1.cpp  lambda_2.cpp  lambda_3.cpp  main.cpp
(+18 files in other folders)
