cmake_minimum_required(VERSION 3.12)
project(PeparationLearning)

set(CMAKE_CXX_STANDARD 14)

add_executable(PeparationLearning
        src/li_le_lr/ReadMe
        src/ma_kun/ReadMe
        src/wang_qian_nan/ReadMe
        src/wang_wei_guo/ReadMe
        src/zhang_hong_tai/ReadMe
        src/zhang_yi_xin/ReadMe
        src/CMakeLists.txt
        CMakeLists.txt
        main.cpp)
