cmake_minimum_required(VERSION 3.12)
project(lambda)

set(CMAKE_CXX_STANDARD 11)

add_executable(lambda main.cpp)
add_executable(functor functor.cpp)
add_executable(lamb_func lamb_func.cpp)
add_executable(lambda_1 lambda_1.cpp)
add_executable(lambda_2 lambda_2.cpp)
add_executable(lambda_3 lambda_3.cpp)
add_executable(lamb_STL lamb_STL.cpp)
add_executable(lamb_STL1 lamb_STL1.cpp)
add_executable(lamb_STL2 lamb_STL2.cpp)